remember me text modified

--- a/index.html
+++ b/index.html
@@ -556,8 +556,7 @@
                 <div class="form-group mt-3 mt-md-0 own-checkbox-div">
                   <input type="checkbox" id="inlineFormCheck" class="" required>
                   <label class="form-check-label text-light m-2" for="inlineFormCheck">
-                    Remember me
-                  </label>
+                    Terms & Conditions and Privacy Policy                  </label>
                 </div>
 
               </div>
