--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     <div class="container" data-aos="zoom-in" data-aos-delay="100" id="mrg-tp">
 
-      <h1 class="text-center" style="color: #5d65ff;">Visualize and Interact</h1>
-      <h3 class="text-secondary text-center">with land on a dynamic map base.</h3>
+      <h1 class="text-center hero-title-main">Visualize and Interact</h1>
+      <h3 class="text-secondary text-center hero-title-sub">with land on a dynamic map base.</h3>
       <!-- <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p> -->
       <div class="social-links text-center">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
