--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                 </div>
 
                 <div class="col-md-9 form-group mt-3 mt-md-0">
-                  <input type="number" class="form-control" name="phone" id="phone" placeholder="Phone" required>
+                  <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone" required>
                 </div>
 
                 <div class="form-group mt-3 mt-md-0 own-checkbox-div">
